# pi-couch-hound

./: .gitignore  CLA.md  CLAUDE.md  README.md  SPEC.md  config.example.yaml  install.sh  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: backend.yml  ci.yml  codeql.yml  frontend.yml
couch_hound/: __init__.py  camera.py  config.py  cooldown.py  database.py  detector.py  escalation.py  main.py  pipeline.py  roi.py  setup_model.py  templates.py  updater.py
couch_hound/actions/: __init__.py  base.py  gpio.py  http.py  mqtt.py  script.py  snapshot.py  sound.py
couch_hound/api/: app.py  auth.py  routes_actions.py  routes_auth.py  routes_config.py  routes_events.py  routes_roi.py  routes_snapshots.py  routes_system.py  routes_update.py  routes_upload.py  schemas.py  websocket.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/api/: auth.ts  client.ts  config.ts  events.ts  system.ts  types.ts  update.ts
frontend/src/hooks/: useStream.ts  useWebSocket.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  (+6 more)
scripts/: example.sh
tests/: conftest.py  test_actions_gpio.py  test_actions_http.py  test_actions_mqtt.py  test_actions_snapshot.py  test_actions_sound.py  test_api_actions.py  test_api_auth.py  test_api_config.py  test_api_events.py  test_api_roi.py  test_api_snapshots.py  test_api_system.py  test_api_update.py  test_api_upload.py  test_camera.py  test_config.py  test_cooldown.py  test_database.py  test_detector.py  test_escalation.py  test_pipeline.py  test_roi.py  test_templates.py  test_updater.py  test_websocket.py
(+22 files in other folders)
